﻿IMPROVEMENTS / FIXES
- General:
	- Add option in BDA settings menu to set a max HP limit for parts.
- AI / WM:
	- Fix bug in collision avoidance that sometimes resulted in more collisions between teammates.
	- Add action group to the WM for removing EVA kerbals' helmets (once the vessel becomes the active one).
- Detectors:
	- Fix anti-aliasing settings affecting craft RCS. Craft will have consistent RCS regardless oF MSAA settings, note that craft may have slightly different RCS across different GPUs/graphics APIs.
	- Adjust RCS scaling value to give 1 m^2 cross-section for a 1 m^2 cross-section sphere (a 25% increase). This setting was most likely previously set with MSAA enabled, so it was set incorrectly.
- Weapons:
	- Fix a bug in bullet hit calculations within the initial bullet offset distance.
	- Fix AP rounds not penetrating rear side of parts they penetrate.
	- Beehive ammo deployment range now adjustable.
	- Fix ExplosionFX spawnpoint for Shaped Charge bullets.
	- Some fixes to nuke behavior in space.
- RWP
	- Update NPC Swap code to work with current web API.
	- Fix AIs chasing GM killed planes.
	- Runway_Project toggle now sets all control surface actuation speeds to 30 deg/s.

v1.5.6.2
IMPROVEMENTS / FIXES
- General:
	- Fix kerbal flags exploding from overheat when placed.
	- Add some missing parts to HPFixes patch.
- UI:
	- Fix IRSTs not responding to Radar Display hotkeys.
	- Fix Radar Analysis Window Radar select UX.
- AI / WM:
	- Add 'Random Part' subsystem targeting option.
- Weapons:
	- Nukes now work in space again.
	- Fix IR missiles not locking on when manually firing.
	- Fix Lasers not hitting missiles.
	- Tweaks Oerlikon Millennium turret to improve missile interception ability, reduce lag.
	- Add frontAspectHeatModifier variable to missile definitions, explained further in sidewinder.cfg. Allows you to create IR missiles that behave more like early IR rear-aspect/tail-chase missiles.